--- a/recette.css
+++ b/recette.css
@@ -10,9 +10,8 @@ body{
 
 div.contenu{
     background-color: white;
-    margin: 60px 10% 80px 10%;
-    padding: 0px 30px 30px 30px;
-    min-width: 350px;
+    margin: 40px 8px 40px 8px;
+    padding: 0px 8px 20px 8px;
     box-shadow: 0px 0px 8px 8px rgba(0, 0, 0, 0.2);
     overflow: visible;
 }
@@ -70,19 +69,19 @@ table.info{
     width: 100%;
     color: white;
     background-color: #6C829DC0;
-    height: 80px;
+    height: 50px;
 }
 
 table.info td{
-    font-size: 14px;
+    font-size: 12px;
     text-align: center;
     vertical-align: top;
 }
 
 table.info th{
-    font-size: 16px;
+    font-size: 14px;
     vertical-align: bottom;
-    padding: 10px;
+    padding: 8px;
 }
 
 img.info{
@@ -94,7 +93,7 @@ img.info{
 }
 
 div.colonne{
-    width: 45%;
+    width: 100%;
     margin-top: 20px;
 }
 
@@ -108,11 +107,6 @@ div.colonne h2{
 
 div.colonne1{
     display: inline-block;
-    margin-right: 10%;
-}
-
-div.colonne2{
-    float: right;
 }
 
 div.ingredients p{
@@ -150,4 +144,45 @@ table.preparation td.preparation_etape{
 
 table.preparation tr{
     height: 40px;
+}
+
+/*style pour ordinateur*/
+@media only screen and (min-width: 768px) {
+    div.contenu{
+        margin: 60px 10% 80px 10%;
+        padding: 0px 30px 30px 30px;
+        min-width: 350px;
+    }
+
+    table.info{
+        height: 80px;
+    }
+    
+    table.info td{
+        font-size: 14px;
+    }
+    
+    table.info th{
+        font-size: 16px;
+    }
+
+    div.colonne{
+        width: 45%;
+    }
+    
+    div.colonne1{
+        margin-right: 10%;
+    }
+    
+    div.colonne2{
+        float: right;
+    }
+}
+
+@media only screen and (min-width: 900px) {
+    div.contenu{
+        margin-left: auto;
+        margin-right: auto;
+        width: 645px;
+    }
 }
